Fix image overlap on home page

--- a/stylesheets/home.css
+++ b/stylesheets/home.css
@@ -100,6 +100,7 @@ h3 {
 img {
     border: 2px solid white;
     border-radius: 25px;
+	max-width: 100%;
 }
 
 img.plain {
